LoyaltyProgram1/src/objects/Loyalty_Registration__c.object
<CustomObject>
    <fields>
        <fullName>CFX_Serial_Number__c</fullName>
        <description>Bio-Rad Serial Number of the CFX Installed Product</description>
        <inlineHelpText>Bio-Rad Serial Number of the CFX Installed Product</inlineHelpText>
        <label>CFX Serial Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Email__c</fullName>
        <label>Registration Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>Loyalty Registration</label>
    <nameField>
        <label>Loyalty Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>